tests/cases/compiler-development/artifact/errors/diagnostic-union-by-enum-unknown-arm.diagnostic
diagnostic error code=T0001 family=type message="union by arm 'aead' is not a case of enum CipherType" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-union-by-enum-unknown-arm.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-union-by-enum-unknown-arm.ari" bytes=274
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-union-by-enum-unknown-arm.ari" line=14 column=5 end_line=14 end_column=9 byte_start=220 byte_end=224 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-union-by-enum-unknown-arm.ari:14:5\n    |\n 14 |     aead => i64,\n    |     ^^^^"
  Note index=0 location=none message="selector path 'security.cipher_type' has enum type CipherType"
  Help index=0 location=none message="rename the arm to an enum case or remove it from the union by field"
